# context-launcher

./: .gitignore  README.md  TODO.md  launch.bat  pyproject.toml  test_launchers.py  test_window_positioning.py
Context Launcher.app/Contents/: Info.plist
Context Launcher.app/Contents/MacOS/: launcher
context/: PHASE6_SUMMARY.md  WINDOW_POSITIONING_DEBUG.md  WINDOW_POSITIONING_FIXED.md  chat_conv.md  context.md  plan.md
context/old_code/: context_launcher_v1.py  context_launcher_v2.py
old_code/: sessions.json
scripts/: create_macos_app.py  generate_icons.py
src/: config.json  context_launcher.py
src/context_launcher/: __main__.py
src/context_launcher/core/: accessibility_helper_macos.py  app_registry.py  backup_manager.py  config.py  debug_config.py  icon_manager.py  platform_utils.py  session.py  tab.py  window_manager.py  workflow_executor.py
src/context_launcher/launchers/: __init__.py  base.py  factory.py
src/context_launcher/resources/: icon.icns
src/context_launcher/templates/: README.md  default_sessions.json  default_sessions_darwin.json  default_sessions_windows.json  default_tabs.json  default_tabs_darwin.json  default_tabs_windows.json
src/context_launcher/ui/: category_dialog.py  main_window.py  session_dialog.py  (+3 more)
tests/: MACOS_PERMISSIONS.md  MACOS_TESTING.md  debug_windows_macos.py  test_launchers_macos.py  test_macos.py  test_monitor_simple_macos.py  test_permissions_helper.py  test_phase2.py  test_phase3_workflow.py  test_window_capture_macos.py  test_window_generic_macos.py  test_window_positioning_macos.py  test_window_readonly_macos.py  test_window_vscode_macos.py
(+8 files in other folders)
