[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-launcher"
version = "3.0.0"
description = "Professional cross-platform workflow launcher for managing work sessions and applications"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FraH"}
]
keywords = ["launcher", "workflow", "productivity", "session-manager", "adhd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

dependencies = [
    "PySide6>=6.6.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "platformdirs>=4.1.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.16.0"]
windows = ["pywin32>=306"]
dev = [
    "pytest>=7.4.3",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
context-launcher = "context_launcher.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_launcher"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
